# around-the-grounds

./: .dockerignore  .env.docker  .env.example  .gitignore  AGENTS.md  ARCHITECTURE_DECISIONS.md  CLAUDE.md  DEPLOY.md  DEPLOYMENT.md  DOCKER.md  Dockerfile  README.md  SCHEDULE-DOCS.md  TEMPORAL-CLOUD-PLAN.md  TEMPORAL-PLAN.md  docker-compose.yml  llm-image-plan.md  pyproject.toml  scraping-urban-family-guide.md  test-deployment.txt  vercel.json
.github/workflows/: docker-build-push.yml
around_the_grounds/: __init__.py  main.py
around_the_grounds/config/: breweries.json  settings.py  site_loader.py
around_the_grounds/config/sites/: ballard-food-trucks.yaml  capitol-hill-kids.yaml  fremont-breweries.yaml  seattle-concerts.yaml
around_the_grounds/models/: __init__.py  brewery.py  event.py  event_source.py  schedule.py  site_config.py
around_the_grounds/parsers/: __init__.py  bale_breaker.py  base.py  chucks_greenwood.py  obec_brewing.py  registry.py  salehs_corner.py  stoup_ballard.py  urban_family.py  wheelie_pop.py
around_the_grounds/parsers/api_based/: __init__.py  hivey_api.py  seattle_food_truck_api.py  squarespace_calendar.py
around_the_grounds/parsers/document_based/: __init__.py  google_sheets_csv.py
around_the_grounds/parsers/html_based/: __init__.py  html_selectors.py  regex_text.py  text_search_html.py
around_the_grounds/scrapers/: __init__.py  coordinator.py
around_the_grounds/temporal/: README.md  __init__.py  activities.py  config.py  schedule_manager.py  shared.py  starter.py  worker.py  workflows.py
around_the_grounds/utils/: __init__.py  date_utils.py  github_auth.py  timezone_utils.py  vision_analyzer.py
public/: data.json  index.html
public/public/: data.json
public_template/: index.html
scripts/: deploy-build.sh  synology-deploy-pull.sh  synology-env-vars.sh  test_vision_analysis.py
templates/family_events/: index.html
templates/music_events/: index.html  vercel.json
tests/: __init__.py  conftest.py  test_error_handling.py
tests/fixtures/config/: test_breweries.json
tests/fixtures/csv/: chucks_greenwood_sample.csv
tests/fixtures/html/: bale_breaker_sample.html  chucks_greenwood_sample.html  error_404.html  malformed.html  stoup_ballard_sample.html  stoup_structured.html  wheelie_pop_sample.html
tests/integration/: test_cli.py  test_coordinator.py  test_vision_integration.py
tests/parsers/: test_bale_breaker.py  test_chucks_greenwood.py  test_obec_brewing.py  test_salehs_corner.py  test_stoup_ballard.py  test_urban_family.py  test_wheelie_pop.py
tests/temporal/: __init__.py  test_activities.py  test_integration.py  test_workflows.py  test_workflows_simple.py
tests/unit/: test_base_parser.py  test_date_utils.py  test_models.py  test_parser_timezone_integration.py  test_registry.py  test_timezone_utils.py  test_vision_analyzer.py
